fix(DiscussionTools): 🐛 add wrapping hotfixes for DiscussionTools header for MW 1.42

--- a/skinStyles/extensions/DiscussionTools/ext.discussionTools.init.styles.less
+++ b/skinStyles/extensions/DiscussionTools/ext.discussionTools.init.styles.less
@@ -107,15 +107,25 @@
 		font-family: var( --font-family-base ) !important;
 		font-weight: var( --font-weight-semi-bold );
 		border-top-color: var( --border-color-base );
+		flex-wrap: wrap;
 
 		> h2 {
 			font-family: var( --font-family-base ) !important;
 			font-weight: var( --font-weight-semi-bold );
 		}
 
+		&-subscribeButton {
+			order: 9999;
+		}
+
 		&-bar {
-			margin-top: var( --space-xxs );
+			overflow-x: auto;
 			font-size: var( --font-size-x-small );
+		}
+
+		&-metadata {
+			flex-wrap: nowrap;
+			white-space: nowrap;
 		}
 
 		&-metaitem {
